added MusicPlayer service

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,4 +8,5 @@
 
 <ion-content padding>
     <button (click)="playMusic()">PLAY</button>
+    <button (click)="pauseMusic()">PAUSE</button>
 </ion-content>
