--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,6 +7,7 @@
 </ion-header>
 
 <ion-content padding>
-    <button (click)="playMusic()">PLAY</button>
-    <button (click)="pauseMusic()">PAUSE</button>
+    <div *ngFor="let track of tracks">
+        <track-card [track]="track" (play)="playMedia(track)" (pause)="pauseMedia()"></track-card>
+    </div>
 </ion-content>
