--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,11 +7,18 @@
 </ion-header>
 
 <ion-content padding>
-    <div class="play-all">
-        <button class="play-all-button" (click)="playAll()">
-            全て再生する
-            <ion-icon md="ios-musical-notes"></ion-icon>
-        </button>
+    <div class="track-option">
+        <ion-searchbar (ionInput)="seachTracks($event)"></ion-searchbar>
+        <div class="button-wrapper">
+            <button class="play-all-button" (click)="playAll()">
+                全て再生する
+                <ion-icon md="ios-musical-notes"></ion-icon>
+            </button>
+            <button class="play-all-button" (click)="platAtRandom()">
+                無作為に再生する
+                <ion-icon name="shuffle"></ion-icon>
+            </button>
+        </div>
     </div>
     <div *ngFor="let track of tracks">
         <track-card [track]="track" (play)="playMedia(track)" (pause)="pauseMedia()"></track-card>
