fix random playlist

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,7 +14,7 @@
                 全て再生する
                 <ion-icon md="ios-musical-notes"></ion-icon>
             </button>
-            <button class="play-all-button" (click)="platAtRandom()">
+            <button class="play-all-button" (click)="playAtRandom()">
                 無作為に再生する
                 <ion-icon name="shuffle"></ion-icon>
             </button>
